--- a/registeration.html
+++ b/registeration.html
@@ -9,6 +9,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-database.js"></script>
     <link rel="stylesheet" href="css/registeration.css">
+    <script  type="module" src="js/registeration.js"></script>
     
 </head>
 <body>
@@ -68,10 +69,10 @@
                     <label for="address">Address:</label>
                     <textarea id="address" name="address" rows="4"></textarea>
                 </div>
-                <button type="submit" onclick="registerUser()">Register</button>
+                <button type="button" onclick="registerUser()">Register</button>
             </div>
         </div>
     </div>
-    <script src="js/registeration.js"></script>
+  
 </body>
 </html>
